<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/appearance"
        android:textColor="?attr/headerText"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:background="@drawable/card_bg"
        android:orientation="horizontal">
        <Switch
            android:id="@+id/themeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="?attr/contentText"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kopia zapasowa"
        android:textColor="?attr/headerText"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:background="@drawable/card_bg"
        android:orientation="vertical">

            <Button
                android:id="@+id/export_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@null"
                android:text="@string/export_all_data"
                android:textAllCaps="false"
                android:textColor="@drawable/text_button_selector"
                android:fontFamily="sans-serif"
                android:textAlignment="viewStart" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="?attr/dividerText"/>
            <Button
                android:id="@+id/import_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@null"
                android:text="@string/import_data"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:fontFamily="sans-serif"
                android:textAlignment="viewStart"/>
        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refuelling_dictionary"
        android:textColor="?attr/headerText"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:background="@drawable/card_bg"
        android:orientation="vertical">
        <Switch
            android:id="@+id/fuel_consumption_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_average_fuel_consumption"
            android:textColor="?attr/contentText"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="O aplikacji"
        android:textColor="?attr/headerText"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:background="@drawable/card_bg"
        android:orientation="vertical">

        <Button
            android:id="@+id/about_app_button"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@null"
            android:text="@string/about_application"
            android:textAllCaps="false"
            android:textColor="@drawable/text_button_selector"
            android:fontFamily="sans-serif"
            android:textAlignment="viewStart" />
    </LinearLayout>


</LinearLayout>