<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp" android:layout_height="wrap_content"
    android:background="@drawable/card_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/backup_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup"
            android:textColor="?attr/headerText"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/import_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/import_"
            android:fontFamily="sans-serif"
            android:textColor="@drawable/button_rectangle_text_selector"
            android:background="@drawable/button_rectangle_selector"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <Button
            android:id="@+id/export_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/export"
            android:fontFamily="sans-serif"
            android:textColor="@drawable/button_rectangle_text_selector"
            android:background="@drawable/button_rectangle_selector"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

    </LinearLayout>



</RelativeLayout>