<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundColor">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">


        <LinearLayout
            android:id="@+id/cost_per_person_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/card_bg"
            android:backgroundTint="#94c2f1"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/card_bg"
                android:backgroundTint="#5CA5F0"
                android:padding="8dp"
                android:src="@drawable/ic_user"
                android:tint="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/cost_per_person_menu"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fuel_consumption_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/card_bg"
            android:backgroundTint="#f7c480"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/card_bg"
                android:backgroundTint="#F5A740"
                android:padding="8dp"
                android:src="@drawable/ic_fuel_consumption"
                android:tint="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/fuel_consumption_menu"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/range_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/card_bg"
            android:backgroundTint="#8DC0A5"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/card_bg"
                android:backgroundTint="#1BB864"
                android:padding="8dp"
                android:src="@drawable/ic_range"
                android:tint="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/range_menu"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="696dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>